# testTaskMindBox

./: LICENSE  README.md  pyproject.toml  test_task_3.ipynb
src/calcSquareTestTask/: main.py
tests/: test.py
