[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calcSquareTestTask"
version = "0.0.1"
authors = [
 { name="Yaroslav Sobeschikov", email="sobeschikov10@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]